--- a/ios/Samples/AndorraTelecomPublic/Podfile
+++ b/ios/Samples/AndorraTelecomPublic/Podfile
@@ -1,5 +1,6 @@
 platform :ios, '9.0'
 use_frameworks!
+inhibit_all_warnings!
 
 target 'AndorraTelecomPublic' do
   	pod 'LiferayScreens', :path => '../../..'
@@ -11,6 +12,9 @@ end
 post_install do |installer|
 	installer.pods_project.targets.each do |target|
 		target.build_configurations.each do |config|
+			if target.to_s == 'Hokusai'
+				config.build_settings['SWIFT_VERSION'] = '3.2'
+			end
 			config.build_settings['CONFIGURATION_BUILD_DIR'] = '$PODS_CONFIGURATION_BUILD_DIR'
 		end
 	end
