LSR-1069 (Swift 4) Update WesterosEmployees to Swift 4

--- a/ios/Samples/WesterosEmployees/App/Podfile
+++ b/ios/Samples/WesterosEmployees/App/Podfile
@@ -3,6 +3,8 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '9.0'
 use_frameworks!
 
+inhibit_all_warnings!
+
 target "WesterosEmployees" do
 	pod 'LiferayScreens', :path => '../../../..'
 
