LSR-1069 (Swift 4) Update Showcase app to Swift 4

--- a/ios/Samples/Showcase-swift/Podfile
+++ b/ios/Samples/Showcase-swift/Podfile
@@ -1,6 +1,8 @@
 platform :ios, '9.0'
 use_frameworks!
 
+inhibit_all_warnings!
+
 target "LiferayScreens-Showcase-Swift" do
     pod 'LiferayScreens', :path => '../../..'
 end
